--- a/index.html
+++ b/index.html
@@ -5,16 +5,164 @@
 
   <link rel="stylesheet" href="style/main.css">
 </head>
-<body>
+<body data-spy="scroll" data-target="#nav-primary">
 
-  <div class="container">
-    <div class="jumbotron">
-      <h1>Modern Music Sentiment Analysis</h1>
-      <h2>By Lyrics Lab</h2>
+  <div class="page-lead">
+    <div class="container">
+      <div class="jumbotron">
+        <h1>Modern Music<br/>Sentiment Analysis</h1>
+        <br/>
+        <h2>Team Lyrics Lab</h2>
+        <p>
+          Michael Johns, Scott Stephens, and Kevin Buhrer
+        </p>
+      </div>
+    </div>
+  </div>
+
+  <nav class="navbar navbar-inverse navbar-static-top">
+    <div id="nav-primary" class="container">
+      <!-- Brand and toggle get grouped for better mobile display -->
+      <div class="navbar-header">
+        <a class="navbar-brand" href="#"><img src="images/GClef.svg" height="45"></a>
+      </div>
+
+      <ul class="nav navbar-nav" role="tablist">
+        <li><a href="#grp-overview">Overview</a></li>
+        <li><a href="#grp-1">Content Group 1</a></li>
+        <li><a href="#grp-2">Content Group 2</a></li>
+        <li><a href="#grp-3">Content Group 3</a></li>
+        <li><a href="#grp-conclude">Conclusion</a></li>
+        <!-- <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><a href="#">Action</a></li>
+            <li><a href="#">Another action</a></li>
+            <li><a href="#">Something else here</a></li>
+            <li role="separator" class="divider"></li>
+            <li><a href="#">Separated link</a></li>
+            <li role="separator" class="divider"></li>
+            <li><a href="#">One more separated link</a></li>
+          </ul>
+        </li> -->
+      </ul>
+    </div><!-- /.container-fluid -->
+  </nav>
+
+  <div class="section" id="grp-overview">
+    <div class="container">
+      <h1>Overview</h1>
       <p>
-        This is the future home of the project.
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec egestas dui vitae ipsum luctus placerat vitae nec turpis. Nunc feugiat nunc vitae risus accumsan fermentum. Nulla nec dignissim ex. Praesent aliquam nisi eleifend maximus tempor. Ut at consequat tellus. Sed bibendum, purus at molestie convallis, risus quam dignissim dolor, ut commodo libero felis a nisl. Vestibulum diam mi, tincidunt vel condimentum vitae, imperdiet eu elit. Phasellus lectus arcu, rhoncus at eros ac, efficitur varius enim. Nam id elit quis magna mollis gravida.
+      </p>
+      <p>
+        Fusce ultricies lacinia ornare. Nulla eleifend, tellus non lacinia tincidunt, diam ipsum aliquet ligula, ut vulputate velit erat eget ipsum. Vivamus mattis, massa vel tincidunt elementum, augue augue auctor dolor, in tristique tortor massa a tortor. Aenean mattis tempor tristique. Ut vitae sapien neque. Praesent porttitor augue vitae tortor commodo, et lobortis justo luctus. Sed aliquam enim non laoreet rhoncus. Suspendisse nisl ex, imperdiet quis iaculis vitae, fermentum eu est. Etiam non nulla pulvinar purus placerat laoreet ut ac orci. Aenean ut lectus mi. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Integer ut turpis massa. Morbi ut massa at sapien faucibus interdum quis a sapien.
       </p>
     </div>
   </div>
+  <div class="section" id="grp-1">
+    <div class="container">
+      <h1>Content Group 1</h1>
+      <p>
+        Morbi ut accumsan turpis. Pellentesque euismod <b>efficitur velit</b>, a maximus elit elementum quis. Donec accumsan scelerisque egestas. Proin consectetur sagittis efficitur. Aliquam laoreet ultrices congue. Nullam in fringilla justo. Mauris a lectus et velit blandit suscipit in nec metus. Phasellus commodo vehicula mollis. Sed in nisi pulvinar, elementum arcu sit amet, accumsan quam. Nullam dapibus lectus diam, vel iaculis enim venenatis nec. Aliquam at est iaculis, dignissim mauris at, bibendum lacus. Quisque tincidunt, neque ut laoreet sagittis, nisi velit posuere sem, gravida scelerisque enim erat semper leo. Nullam suscipit, tellus non vestibulum placerat, lacus purus mattis odio, in imperdiet ante dolor eget massa. Etiam aliquet sem dui, at cursus ipsum venenatis eget.
+      </p>
+
+      <div class="text-bubble">
+        Something interesting that is quotable from a song.
+      </div>
+
+      <p>
+        Nam turpis lectus, efficitur et pretium ut, vestibulum id ipsum. Etiam vel ex odio. Pellentesque sed sem dictum, porttitor massa vitae, sollicitudin leo. Sed blandit tellus sed mauris aliquam sagittis. Nullam molestie erat purus, sed molestie risus mollis sit amet. Donec a posuere quam, ut cursus enim. Suspendisse scelerisque enim elit, at vehicula arcu eleifend interdum. Donec sit amet quam consequat, volutpat enim non, facilisis urna. Praesent sagittis ante neque, eu accumsan enim lacinia eget.
+      </p>
+    </div>
+  </div>
+  <div class="section aside">
+    <div class="container">
+      <h1>Use context information</h1>
+
+      <p>
+        Some very interesting information, but serves as more of an aside. Perhaps some background / supporting information
+        that fills in some context.
+      <p>
+
+      <p>The content could be of any size, but probably shouldn't interfere with overall flow. Some thumbnails of charts could work well that expand when clicked.</p>
+    </div>
+  </div>
+  <div class="section" id="grp-2">
+    <div class="container">
+      <h1>Content Group 2</h1>
+      <p>
+        Proin dapibus vestibulum sapien ac fermentum. Fusce placerat magna eget ante laoreet, facilisis rutrum justo aliquam. Donec a massa porttitor, semper risus et, sagittis urna. Sed eu odio lectus. Sed malesuada pharetra libero vel sollicitudin. Curabitur iaculis dignissim dictum. Aenean id fringilla eros. Donec sit amet metus magna. In at ex nibh. Suspendisse eleifend tristique dapibus. Donec quis dui at nisi maximus efficitur. Mauris et tellus non arcu consequat egestas at nec velit.
+      </p>
+
+      <div class="text-bubble right">
+        Something interesting that is quotable from a song from the right side.
+      </div>
+
+      <p>
+        Morbi ut accumsan turpis. Pellentesque euismod <b>efficitur velit</b>, a maximus elit elementum quis. Donec accumsan scelerisque egestas. Proin consectetur sagittis efficitur. Aliquam laoreet ultrices congue. Nullam in fringilla justo. Mauris a lectus et velit blandit suscipit in nec metus. Phasellus commodo vehicula mollis. Sed in nisi pulvinar, elementum arcu sit amet, accumsan quam. Nullam dapibus lectus diam, vel iaculis enim venenatis nec. Aliquam at est iaculis, dignissim mauris at, bibendum lacus. Quisque tincidunt, neque ut laoreet sagittis, nisi velit posuere sem, gravida scelerisque enim erat semper leo. Nullam suscipit, tellus non vestibulum placerat, lacus purus mattis odio, in imperdiet ante dolor eget massa. Etiam aliquet sem dui, at cursus ipsum venenatis eget.
+      </p>
+    </div>
+  </div>
+  <div class="section" id="grp-3">
+    <div class="container">
+      <h1>Content Group 3</h1>
+      <p>
+        Nam turpis lectus, efficitur et pretium ut, vestibulum id ipsum. Etiam vel ex odio. Pellentesque sed sem dictum, porttitor massa vitae, sollicitudin leo. Sed blandit tellus sed mauris aliquam sagittis. Nullam molestie erat purus, sed molestie risus mollis sit amet. Donec a posuere quam, ut cursus enim. Suspendisse scelerisque enim elit, at vehicula arcu eleifend interdum. Donec sit amet quam consequat, volutpat enim non, facilisis urna. Praesent sagittis ante neque, eu accumsan enim lacinia eget.
+      </p>
+      <p>
+        <img src="charts/artists_with_songs_trans.png" />
+      </p>
+    </div>
+  </div>
+  <div class="section" id="grp-conclude">
+    <div class="container">
+      <h1>Conclusion</h1>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec egestas dui vitae ipsum luctus placerat vitae nec turpis. Nunc feugiat nunc vitae risus accumsan fermentum. Nulla nec dignissim ex. Praesent aliquam nisi eleifend maximus tempor. Ut at consequat tellus. Sed bibendum, purus at molestie convallis, risus quam dignissim dolor, ut commodo libero felis a nisl. Vestibulum diam mi, tincidunt vel condimentum vitae, imperdiet eu elit. Phasellus lectus arcu, rhoncus at eros ac, efficitur varius enim. Nam id elit quis magna mollis gravida.
+      </p>
+      <p>
+        Fusce ultricies lacinia ornare. Nulla eleifend, tellus non lacinia tincidunt, diam ipsum aliquet ligula, ut vulputate velit erat eget ipsum. Vivamus mattis, massa vel tincidunt elementum, augue augue auctor dolor, in tristique tortor massa a tortor. Aenean mattis tempor tristique. Ut vitae sapien neque. Praesent porttitor augue vitae tortor commodo, et lobortis justo luctus. Sed aliquam enim non laoreet rhoncus. Suspendisse nisl ex, imperdiet quis iaculis vitae, fermentum eu est. Etiam non nulla pulvinar purus placerat laoreet ut ac orci. Aenean ut lectus mi. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Integer ut turpis massa. Morbi ut massa at sapien faucibus interdum quis a sapien.
+      </p>
+    </div>
+  </div>
+
+  <footer>
+    <div class="container">
+      <div class="row">
+        <div class="team-members col-md-4">
+          <ul>
+            <li>Kevin Buhrer</li>
+            <li>Michael Johns</li>
+            <li>Scott Stephens</li>
+          </ul>
+        </div>
+          <div class="class-info col-md-4">
+            <b>CS 109</b><br />
+            Harvard<br />
+            Fall 2015
+          </div>
+      </div>
+    </div>
+  </footer>
+
+  <script src="bower_components/jquery/dist/jquery.min.js"></script>
+  <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+  <script>
+	$('nav').affix({
+		offset: {
+			top: $('.page-lead').outerHeight(true) - ($('nav').outerHeight(true) / 2)
+		}
+	});
+
+	// var $intro = $('.page-lead .container'),
+	// 	introHeight = $intro.outerHeight(),
+	// 	$jumbo = $('.jumbotron');
+	// $(window).on('scroll', function(e) {
+	// 	//$intro.css('top', window.scrollY * -1 * (window.scrollY / (introHeight * 2)) );
+  //
+	// 	$jumbo.css('margin-top', (window.scrollY * 1 / 10));
+	// });
+	</script>
 </body>
 </html>
