Further styles and components

--- a/index.html
+++ b/index.html
@@ -52,6 +52,17 @@
   <div class="section" id="grp-overview">
     <div class="container">
       <h1>Overview</h1>
+
+      <div class="note-box right">
+        <h2>Directly Supporting Info</h2>
+
+        <ul>
+          <li>Some information by the numbers;</li>
+          <li>figures, details, insights;</li>
+          <li>anything that applies to more than a single paragraph in a given section.</li>
+        </ul>
+      </div>
+
       <p>
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec egestas dui vitae ipsum luctus placerat vitae nec turpis. Nunc feugiat nunc vitae risus accumsan fermentum. Nulla nec dignissim ex. Praesent aliquam nisi eleifend maximus tempor. Ut at consequat tellus. Sed bibendum, purus at molestie convallis, risus quam dignissim dolor, ut commodo libero felis a nisl. Vestibulum diam mi, tincidunt vel condimentum vitae, imperdiet eu elit. Phasellus lectus arcu, rhoncus at eros ac, efficitur varius enim. Nam id elit quis magna mollis gravida.
       </p>
@@ -78,7 +89,7 @@
   </div>
   <div class="section aside">
     <div class="container">
-      <h1>Use context information</h1>
+      <h1>Useful context information</h1>
 
       <p>
         Some very interesting information, but serves as more of an aside. Perhaps some background / supporting information
@@ -115,7 +126,7 @@
       </p>
     </div>
   </div>
-  <div class="section" id="grp-conclude">
+  <div class="section last" id="grp-conclude">
     <div class="container">
       <h1>Conclusion</h1>
       <p>
