--- a/index.html
+++ b/index.html
@@ -32,19 +32,18 @@
         <li><a href="#grp-1">Content Group 1</a></li>
         <li><a href="#grp-2">Content Group 2</a></li>
         <li><a href="#grp-3">Content Group 3</a></li>
-        <li><a href="#grp-conclude">Conclusion</a></li>
-        <!-- <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Example Elements <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
+            <li><a href="#subgrp-headers">Headers</a></li>
             <li role="separator" class="divider"></li>
-            <li><a href="#">Separated link</a></li>
+            <li><a href="#subgrp-bubbles">Text Bubbles</a></li>
+            <li><a href="#subgrp-notes">Side Notes</a></li>
             <li role="separator" class="divider"></li>
-            <li><a href="#">One more separated link</a></li>
+            <li><a href="#subgrp-asides">Asides</a></li>
           </ul>
-        </li> -->
+        </li>
+        <li><a href="#grp-conclude">Conclusion</a></li>
       </ul>
     </div><!-- /.container-fluid -->
   </nav>
@@ -71,11 +70,11 @@
       </p>
     </div>
   </div>
-  <div class="section" id="grp-1">
+  <div class="section visible-delay" id="grp-1">
     <div class="container">
       <h1>Content Group 1</h1>
       <p>
-        Morbi ut accumsan turpis. Pellentesque euismod <b>efficitur velit</b>, a maximus elit elementum quis. Donec accumsan scelerisque egestas. Proin consectetur sagittis efficitur. Aliquam laoreet ultrices congue. Nullam in fringilla justo. Mauris a lectus et velit blandit suscipit in nec metus. Phasellus commodo vehicula mollis. Sed in nisi pulvinar, elementum arcu sit amet, accumsan quam. Nullam dapibus lectus diam, vel iaculis enim venenatis nec. Aliquam at est iaculis, dignissim mauris at, bibendum lacus. Quisque tincidunt, neque ut laoreet sagittis, nisi velit posuere sem, gravida scelerisque enim erat semper leo. Nullam suscipit, tellus non vestibulum placerat, lacus purus mattis odio, in imperdiet ante dolor eget massa. Etiam aliquet sem dui, at cursus ipsum venenatis eget.
+        Morbi ut <i>accumsan</i> turpis. Pellentesque euismod <b>efficitur velit</b>, a maximus elit elementum quis. Donec accumsan scelerisque egestas. Proin consectetur sagittis efficitur. Aliquam laoreet ultrices congue. Nullam in fringilla justo. Mauris a lectus et velit blandit suscipit in nec metus. Phasellus commodo vehicula mollis. Sed in nisi pulvinar, elementum arcu sit amet, accumsan quam. Nullam dapibus lectus diam, vel iaculis enim venenatis nec. Aliquam at est iaculis, dignissim mauris at, bibendum lacus. Quisque tincidunt, neque ut laoreet sagittis, nisi velit posuere sem, gravida scelerisque enim erat semper leo. Nullam suscipit, tellus non vestibulum placerat, lacus purus mattis odio, in imperdiet ante dolor eget massa. Etiam aliquet sem dui, at cursus ipsum venenatis eget.
       </p>
 
       <div class="text-bubble">
@@ -87,43 +86,183 @@
       </p>
     </div>
   </div>
-  <div class="section aside">
+  <div class="aside pri visible-delay">
     <div class="container">
       <h1>Useful context information</h1>
 
       <p>
-        Some very interesting information, but serves as more of an aside. Perhaps some background / supporting information
+        Some very interesting information, but serves as <b>more</b> of an aside. Perhaps some background / supporting information
         that fills in some context.
       <p>
 
       <p>The content could be of any size, but probably shouldn't interfere with overall flow. Some thumbnails of charts could work well that expand when clicked.</p>
     </div>
   </div>
-  <div class="section" id="grp-2">
+  <div class="section visible-delay" id="grp-2">
     <div class="container">
       <h1>Content Group 2</h1>
       <p>
         Proin dapibus vestibulum sapien ac fermentum. Fusce placerat magna eget ante laoreet, facilisis rutrum justo aliquam. Donec a massa porttitor, semper risus et, sagittis urna. Sed eu odio lectus. Sed malesuada pharetra libero vel sollicitudin. Curabitur iaculis dignissim dictum. Aenean id fringilla eros. Donec sit amet metus magna. In at ex nibh. Suspendisse eleifend tristique dapibus. Donec quis dui at nisi maximus efficitur. Mauris et tellus non arcu consequat egestas at nec velit.
       </p>
 
-      <div class="text-bubble right">
+      <div class="text-bubble tri right">
         Something interesting that is quotable from a song from the right side.
       </div>
 
       <p>
         Morbi ut accumsan turpis. Pellentesque euismod <b>efficitur velit</b>, a maximus elit elementum quis. Donec accumsan scelerisque egestas. Proin consectetur sagittis efficitur. Aliquam laoreet ultrices congue. Nullam in fringilla justo. Mauris a lectus et velit blandit suscipit in nec metus. Phasellus commodo vehicula mollis. Sed in nisi pulvinar, elementum arcu sit amet, accumsan quam. Nullam dapibus lectus diam, vel iaculis enim venenatis nec. Aliquam at est iaculis, dignissim mauris at, bibendum lacus. Quisque tincidunt, neque ut laoreet sagittis, nisi velit posuere sem, gravida scelerisque enim erat semper leo. Nullam suscipit, tellus non vestibulum placerat, lacus purus mattis odio, in imperdiet ante dolor eget massa. Etiam aliquet sem dui, at cursus ipsum venenatis eget.
       </p>
-    </div>
-  </div>
-  <div class="section" id="grp-3">
-    <div class="container">
-      <h1>Content Group 3</h1>
-      <p>
-        Nam turpis lectus, efficitur et pretium ut, vestibulum id ipsum. Etiam vel ex odio. Pellentesque sed sem dictum, porttitor massa vitae, sollicitudin leo. Sed blandit tellus sed mauris aliquam sagittis. Nullam molestie erat purus, sed molestie risus mollis sit amet. Donec a posuere quam, ut cursus enim. Suspendisse scelerisque enim elit, at vehicula arcu eleifend interdum. Donec sit amet quam consequat, volutpat enim non, facilisis urna. Praesent sagittis ante neque, eu accumsan enim lacinia eget.
-      </p>
       <p>
         <img src="charts/artists_with_songs_trans.png" />
       </p>
+    </div>
+  </div>
+  <div class="section visible-delay" id="grp-3">
+    <div class="container">
+      <h1>Content Group 3</h1>
+      <div>
+        <h2>Most Succesful Artists Over Time</h2>
+        <p>Use the chart below to filter the time period (<i>click and drag to create a selection box</i>). Use the table beneath to view a listing.</p>
+        <div id="chart-yasc" class="chart bar-chart"></div>
+
+        <div id="totals"><b id="active">-</b> of <i id="total">-</i> songs selected. Filter: start of <b id="start-year"></b> through end of <b id="end-year"></b></div>
+        <div id="lists">
+          <table class="table table-striped table-hover">
+            <thead><th>Artist</th><th>Total Songs</th><th># Chartings Years</th></thead>
+            <tbody id="yasc-list" class="list"></tbody>
+          </table>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="section visible-delay" id="grp-ex-elem">
+    <div class="container">
+      <h1>Example Elements</h1>
+
+      <div class="" id="subgrp-headers">
+        <h2>Header Elements</h2>
+        <h1>Header 1</h1>
+        <h2>Header 2</h2>
+        <h3>Header 3</h3>
+        <h4>Header 4</h4>
+        <h5>Header 5</h5>
+      </div>
+
+      <div class="vspace"></div>
+
+      <h2 id="subgrp-bubbles">Text Bubbles</h2>
+      <div class="text-bubble dark">
+        Something interesting that is quotable from a song from the left side.
+      </div>
+      <div class="text-bubble pri right">
+        Something interesting that is quotable from a song from the right side.
+      </div>
+      <div class="text-bubble sec">
+        (Default Style) Something interesting that is quotable from a song from the left side.
+      </div>
+      <div class="text-bubble tri right">
+        Something interesting that is quotable from a song from the right side.
+      </div>
+      <div class="text-bubble light">
+        Something interesting that is quotable from a song from the left side.
+      </div>
+
+      <div class="vspace"></div>
+
+      <h2 id="subgrp-notes">Side Notes</h2>
+      <div class="note-box">
+        <h2>(Default Style) Directly Supporting Info</h2>
+
+        <ul>
+          <li>Some information by the numbers;</li>
+          <li>figures, details, insights;</li>
+          <li>anything that applies to more than a single paragraph in a given section.</li>
+        </ul>
+      </div>
+      <div class="note-box pri right">
+        <h2>Directly Supporting Info</h2>
+
+        <ul>
+          <li>Some information by the numbers;</li>
+          <li>figures, details, insights;</li>
+          <li>anything that applies to more than a single paragraph in a given section.</li>
+        </ul>
+      </div>
+      <div class="clearfix"></div>
+      <div class="note-box sec">
+        <h2>Directly Supporting Info</h2>
+
+        <ul>
+          <li>Some information by the numbers;</li>
+          <li>figures, details, insights;</li>
+          <li>anything that applies to more than a single paragraph in a given section.</li>
+        </ul>
+      </div>
+      <div class="note-box tri right">
+        <h2>Directly Supporting Info</h2>
+
+        <ul>
+          <li>Some information by the numbers;</li>
+          <li>figures, details, insights;</li>
+          <li>anything that applies to more than a single paragraph in a given section.</li>
+        </ul>
+      </div>
+      <div class="note-box dark">
+        <h2>Directly Supporting Info</h2>
+
+        <ul>
+          <li>Some information by the numbers;</li>
+          <li>figures, details, insights;</li>
+          <li>anything that applies to more than a single paragraph in a given section.</li>
+        </ul>
+      </div>
+    </div>
+  </div>
+  <div class="aside" id="subgrp-asides">
+    <div class="container">
+      <h1>Aside (Default Style)</h1>
+
+      <p>
+        Some very interesting information, but serves as <b>more</b> of an aside. Perhaps some background / supporting information
+        that fills in some context.
+      <p>
+
+      <p>The content could be of any size, but probably shouldn't interfere with overall flow. Some thumbnails of charts could work well that expand when clicked.</p>
+    </div>
+  </div>
+  <div class="aside sec no-header">
+    <div class="container">
+      <div>Small aside with no header. Quick info that will immediately make sense to the user regardless of the header.</div>
+    </div>
+  </div>
+  <div class="aside pri">
+    <div class="container">
+      <h1>Useful context information</h1>
+
+      <p>
+        Some very interesting information, but serves as <b>more</b> of an aside. Perhaps some background / supporting information
+        that fills in some context.
+      <p>
+    </div>
+  </div>
+  <div class="aside tri no-header">
+    <div class="container">
+      <div>
+        Some very interesting information, but serves as <b>more</b> of an aside. Perhaps some background / supporting information
+        that fills in some context.
+      </div>
+    </div>
+  </div>
+  <div class="aside light">
+    <div class="container">
+      <h1>Final Example Aside</h1>
+
+      <p>
+        Some very interesting information, but serves as <b>more</b> of an aside. Perhaps some background / supporting information
+        that fills in some context.
+      <p>
+
+      <p>The content could be of any size, but probably shouldn't interfere with overall flow. Some thumbnails of charts could work well that expand when clicked.</p>
     </div>
   </div>
   <div class="section last" id="grp-conclude">
@@ -135,30 +274,44 @@
       <p>
         Fusce ultricies lacinia ornare. Nulla eleifend, tellus non lacinia tincidunt, diam ipsum aliquet ligula, ut vulputate velit erat eget ipsum. Vivamus mattis, massa vel tincidunt elementum, augue augue auctor dolor, in tristique tortor massa a tortor. Aenean mattis tempor tristique. Ut vitae sapien neque. Praesent porttitor augue vitae tortor commodo, et lobortis justo luctus. Sed aliquam enim non laoreet rhoncus. Suspendisse nisl ex, imperdiet quis iaculis vitae, fermentum eu est. Etiam non nulla pulvinar purus placerat laoreet ut ac orci. Aenean ut lectus mi. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Integer ut turpis massa. Morbi ut massa at sapien faucibus interdum quis a sapien.
       </p>
+      <p>
+        Nam turpis lectus, efficitur et pretium ut, vestibulum id ipsum. Etiam vel ex odio. Pellentesque sed sem dictum, porttitor massa vitae, sollicitudin leo. Sed blandit tellus sed mauris aliquam sagittis. Nullam molestie erat purus, sed molestie risus mollis sit amet. Donec a posuere quam, ut cursus enim. Suspendisse scelerisque enim elit, at vehicula arcu eleifend interdum. Donec sit amet quam consequat, volutpat enim non, facilisis urna. Praesent sagittis ante neque, eu accumsan enim lacinia eget.
+      </p>
     </div>
   </div>
 
   <footer>
     <div class="container">
       <div class="row">
+        <div class="class-info col-md-4">
+          <h3>Project</h3>
+          <div>Modern Music Sentiment Analysis</div>
+          <div>by team Lyrics Lab</div>
+        </div>
         <div class="team-members col-md-4">
-          <ul>
+          <h3>Team Members</h3>
+          <ul class="plain">
             <li>Kevin Buhrer</li>
             <li>Michael Johns</li>
             <li>Scott Stephens</li>
           </ul>
         </div>
-          <div class="class-info col-md-4">
-            <b>CS 109</b><br />
-            Harvard<br />
-            Fall 2015
-          </div>
+        <div class="class-info col-md-4">
+          <h3>Course Information</h3>
+          <div>CSCI E-109 Data Science</div>
+          <div>Harvard University</div>
+          <div>Fall 2015</div>
+        </div>
       </div>
     </div>
   </footer>
 
   <script src="bower_components/jquery/dist/jquery.min.js"></script>
   <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+  <script src="bower_components/d3/d3.js"></script>
+  <script src="bower_components/throttle-debounce/dist/throttle-debounce.min.js"></script>
+  <script src="lib/crossfilter.min.js"></script>
+  <script src="scripts/charts.js"></script>
   <script>
 	$('nav').affix({
 		offset: {
@@ -174,6 +327,32 @@
   //
 	// 	$jumbo.css('margin-top', (window.scrollY * 1 / 10));
 	// });
+	//
+
+  function checkVisibility() {
+    var $visItems = $('.visible-delay');
+
+    if ($visItems.length === 0)  {
+      // Deactivate the scroll listener once everything is in view.
+      window.scrollListener.off('scroll.visdelay');
+    }
+    else {
+      $visItems.each(function() {
+          var edge_of_object = $(this).offset().top + 50;
+          var bottom_of_window = $(window).scrollTop() + $(window).height();
+
+          /* If the object is partial in view, fade it it */
+          if( bottom_of_window > edge_of_object ){
+              $(this).removeClass('visible-delay');
+          }
+      });
+    }
+  }
+
+  $(document).ready(function() {
+    checkVisibility();
+    window.scrollListener = $(window).on('scroll.visdelay', $.throttle(250, checkVisibility));
+  });
 	</script>
 </body>
 </html>
