Word Clouds and Synonyms

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
         <li><a href="#grp-1">Content Group 1</a></li>
         <li><a href="#grp-2">Content Group 2</a></li>
         <li><a href="#grp-3">Content Group 3</a></li>
+        <li><a href="#grp-4">Content Group 4</a></li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Example Elements <span class="caret"></span></a>
           <ul class="dropdown-menu">
@@ -72,6 +73,7 @@
       </p>
     </div>
   </div>
+
   <div class="section visible-delay" id="grp-1">
     <div class="container">
       <h1>Content Group 1</h1>
@@ -174,6 +176,7 @@
 
     </div>
   </div>
+
   <div class="aside pri visible-delay">
     <div class="container">
       <h1>Useful context information</h1>
@@ -186,6 +189,7 @@
       <p>The content could be of any size, but probably shouldn't interfere with overall flow. Some thumbnails of charts could work well that expand when clicked.</p>
     </div>
   </div>
+
   <div class="section visible-delay" id="grp-2">
     <div class="container">
       <h1>Content Group 2</h1>
@@ -318,8 +322,21 @@
       <p class="center">
         <img src="charts/artists_with_songs_trans.png" />
       </p>
+
+      <p>
+        Proin dapibus vestibulum sapien ac fermentum. Fusce placerat magna eget ante laoreet, facilisis rutrum justo aliquam. Donec a massa porttitor, semper risus et, sagittis urna. Sed eu odio lectus. Sed malesuada pharetra libero vel sollicitudin. Curabitur iaculis dignissim dictum. Aenean id fringilla eros. Donec sit amet metus magna. In at ex nibh. Suspendisse eleifend tristique dapibus. Donec quis dui at nisi maximus efficitur. Mauris et tellus non arcu consequat egestas at nec velit.
+      </p>
+
+      <h2>Offensive and Slang Words</h2>
+      <div class="chart-wrap">
+        <div class="fade-edge"></div>
+        <div class="scroll-hort">
+          <img src="charts/noun_histogram_decade_offensives_reduced.png" />
+        </div>
+      </div>
     </div>
   </div>
+
   <div class="section visible-delay" id="grp-3">
     <div class="container">
       <h1>Content Group 3</h1>
@@ -341,6 +358,106 @@
       </div>
     </div>
   </div>
+
+  <div class="section visible-delay" id="grp-4">
+    <div class="container">
+      <h1>Content Group 4</h1>
+      <div>
+        <h2>Adjective Synonyms</h2>
+
+        <div class="chart-wrap pull-right third-width">
+          <img src="charts/adj_decade_comp_synonyms_total.png" />
+        </div>
+
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec egestas dui vitae ipsum luctus placerat vitae nec turpis. Nunc feugiat nunc vitae risus accumsan fermentum. Nulla nec dignissim ex. Praesent aliquam nisi eleifend maximus tempor. Ut at consequat tellus. Sed bibendum, purus at molestie convallis, risus quam dignissim dolor, ut commodo libero felis a nisl. Vestibulum diam mi, tincidunt vel condimentum vitae, imperdiet eu elit. Phasellus lectus arcu, rhoncus at eros ac, efficitur varius enim. Nam id elit quis magna mollis gravida.
+        </p>
+
+        <p>
+          Fusce ultricies lacinia ornare. Nulla eleifend, tellus non lacinia tincidunt, diam ipsum aliquet ligula, ut vulputate velit erat eget ipsum. Vivamus mattis, massa vel tincidunt elementum, augue augue auctor dolor, in tristique tortor massa a tortor. Aenean mattis tempor tristique. Ut vitae sapien neque. Praesent porttitor augue vitae tortor commodo, et lobortis justo luctus. Sed aliquam enim non laoreet rhoncus. Suspendisse nisl ex, imperdiet quis iaculis vitae, fermentum eu est. Etiam non nulla pulvinar purus placerat laoreet ut ac orci. Aenean ut lectus mi. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Integer ut turpis massa. Morbi ut massa at sapien faucibus interdum quis a sapien.
+        </p>
+
+        <div class="clearfix">&nbsp;</div>
+
+        <div class="chart-wrap">
+          <img src="charts/adj_decade_comp_synonyms_spanning.png" />
+        </div>
+
+
+        <h2>Noun Synonyms</h2>
+
+        <div class="chart-wrap pull-right third-width">
+          <img src="charts/noun_decade_comp_synonyms_total.png" />
+        </div>
+
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec egestas dui vitae ipsum luctus placerat vitae nec turpis. Nunc feugiat nunc vitae risus accumsan fermentum. Nulla nec dignissim ex. Praesent aliquam nisi eleifend maximus tempor. Ut at consequat tellus. Sed bibendum, purus at molestie convallis, risus quam dignissim dolor, ut commodo libero felis a nisl. Vestibulum diam mi, tincidunt vel condimentum vitae, imperdiet eu elit. Phasellus lectus arcu, rhoncus at eros ac, efficitur varius enim. Nam id elit quis magna mollis gravida.
+        </p>
+
+        <p>
+          Fusce ultricies lacinia ornare. Nulla eleifend, tellus non lacinia tincidunt, diam ipsum aliquet ligula, ut vulputate velit erat eget ipsum. Vivamus mattis, massa vel tincidunt elementum, augue augue auctor dolor, in tristique tortor massa a tortor. Aenean mattis tempor tristique. Ut vitae sapien neque. Praesent porttitor augue vitae tortor commodo, et lobortis justo luctus. Sed aliquam enim non laoreet rhoncus. Suspendisse nisl ex, imperdiet quis iaculis vitae, fermentum eu est. Etiam non nulla pulvinar purus placerat laoreet ut ac orci. Aenean ut lectus mi. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Integer ut turpis massa. Morbi ut massa at sapien faucibus interdum quis a sapien.
+        </p>
+
+        <div class="clearfix">&nbsp;</div>
+
+        <div class="chart-wrap">
+          <img src="charts/noun_decade_comp_synonyms_spanning.png" />
+        </div>
+
+        <h2>Words Clouds</h2>
+        <h3>Top 10 Artists</h3>
+        <p>
+          An introduction about the adjectives.
+        </p>
+        <div class="image-set h-500">
+          <div class="image-set-list">
+            <div class="image-set-item" data-src="charts/word_clouds/all_genres_all_decades.png">
+              Entire Corpus
+            </div>
+
+            <hr>
+
+            <div class="image-set-item" data-src="charts/word_clouds/madonna.png">
+              1. Madonna
+            </div>
+            <div class="image-set-item" data-src="charts/word_clouds/mariah-carey.png">
+              2.	Mariah Carey
+            </div>
+            <div class="image-set-item" data-src="charts/word_clouds/elton-john.png">
+              3.	Elton John
+            </div>
+            <div class="image-set-item" data-src="charts/word_clouds/michael-jackson.png">
+              4.	Michael Jackson
+            </div>
+            <div class="image-set-item" data-src="charts/word_clouds/rihanna.png">
+              5.	Rihanna
+            </div>
+            <div class="image-set-item" data-src="charts/word_clouds/whitney-houston.png">
+              6.	Whitney Houston
+            </div>
+            <div class="image-set-item" data-src="charts/word_clouds/janet-jackson.png">
+              7.	Janet Jackson
+            </div>
+            <div class="image-set-item" data-src="charts/word_clouds/usher.png">
+              8.	Usher
+            </div>
+            <div class="image-set-item" data-src="charts/word_clouds/stevie-wonder.png">
+              9.	Stevie Wonder
+            </div>
+            <div class="image-set-item" data-src="charts/word_clouds/r-kelly.png">
+              10.	R. Kelly
+            </div>
+          </div>
+          <div class="image-set-full">
+            <!-- <div class="image-set-full-close">X</div> -->
+          </div>
+        </div>
+
+      </div>
+    </div>
+  </div>
+
+
   <!--<div class="section visible-delay" id="grp-ex-elem">
     <div class="container">
       <h1>Example Elements</h1>
