Image set updates

--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@
         </p>
         <div class="image-set h-500">
           <div class="image-set-list">
-            <div class="image-set-item" data-src="charts/word_clouds/all_genres_all_decades.png">
+            <div class="image-set-item default-item" data-src="charts/word_clouds/all_genres_all_decades.png">
               Entire Corpus
             </div>
 
