Minor image set tweaks

--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
       </p>
       <div class="image-set h-650">
         <div class="image-set-list">
-          <div class="image-set-subheader">
+          <div class="image-set-subheader header-vspace">
             Songs / Artists Distrobution
           </div>
 
